@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.586 2008-02-23 00:42:16 martin Exp $
+# $Id: CHANGES,v 1.587 2008-02-23 01:33:05 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -115,6 +115,8 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.6 (2008/??/??)
+ - (2008/02/23) Fixed bug# 2275 - Need User or UserID! by using UnlockTickets.pl
+    and PendingJobs.pl.
  - (2008/02/23) Fixed bug# 2696 - CustomerPanelOwnSelection and
     CustomerGroupSupport does not work together (show also queues without
     create permissions).
